src/components/shared-header/global-nav/global-nav.scss
header {
  background-color: $cr-cyan;
  position: fixed;
  top: 0;
  width: 100vw;
  z-index: 1;

  > div {
    @include container();

    padding: 0 $global-nav-padding;
    position: relative;
  }
}

.global-nav-items {
  display: flex;
  justify-content: space-between;
}

.global-actions,
.user-actions {
  display: flex;

  a {
    &:first-of-type {
      margin-right: 18px;
    }
  }
}

.logo {
  padding: 7px;

  svg {
    fill: $cr-white;
    height: 29px;
    width: 111px;
  }
}

.account,
.donate,
.menu,
.search {
  $size: 22px;

  display: block;
  height: $size;
  padding: 12px 0;
  width: $size;

  svg {
    fill: $cr-white;
    height: $size;
    width: $size;
  }
}

.close {
  $size: 26px;

  display: block;
  height: $size;
  padding: 9px 0;
  width: $size;

  svg {
    fill: $cr-white;
    height: $size;
    width: $size;
  }
}

$has-close-button: (
  menu-container: menu,
  profile-container: account,
  give-container: donate
);

@each $container, $icon in $has-close-button {
  // stylelint-disable a11y/no-display-none

  .#{$container} {
    .close {
      display: none;
      margin-right: -4px;
    }

    &.nav-is-showing {
      .#{$icon} {
        display: none;
      }

      .close {
        display: block;
      }
    }
  }
}

